objects/MedProSC__MedProOnePassSearchRequest__c.object
<CustomObject>
    <description>A custom object which stores the MedPro Search Connector search queries for the purpose of maintaining a system history of all issued searches</description>
    <fields>
        <fullName>MedProSC__AddrLine1__c</fullName>
        <label>AddrLine1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__CDS_Number__c</fullName>
        <label>CDS Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__City__c</fullName>
        <label>City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__DEA_Number__c</fullName>
        <label>DEA Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__FirstName__c</fullName>
        <label>FirstName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__LastName__c</fullName>
        <label>LastName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__NPINumber__c</fullName>
        <label>NPINumber</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__ProfessionalDesignation__c</fullName>
        <label>ProfessionalDesignation</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__StateLicenseNumber__c</fullName>
        <label>StateLicenseNumber</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__StateOfLicense__c</fullName>
        <label>StateOfLicense</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>MedPro One Pass Search Request</label>
    <nameField>
        <displayFormat>MPSR-{00000000}</displayFormat>
        <label>MedProOnePassSearchRequest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro One Pass Search Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>